# glider_hybrid_whoi

glider_hybrid_whoi_control/launch/: start_uuv_kinematics_teleop.launch
glider_hybrid_whoi_control/rviz/: uuv_kinematics_control.rviz
glider_hybrid_whoi_gazebo/launch/: uuv_kinematics_testbed.launch
glider_hybrid_whoi_gazebo/worlds/: seafloor_underwater_no_current.world
kinematics_ros_plugins/scripts/: test_directKinematics.py
uuv_kinematics_description/: CMakeLists.txt  package.xml
uuv_kinematics_description/launch/: upload_uuv_kinematics.launch
uuv_kinematics_description/robots/: uuv_kinematics_default.urdf.xacro
uuv_kinematics_description/urdf/: uuv_kinematics_base.xacro  uuv_kinematics_sensors.xacro
uuv_kinematics_ros_plugin/: CMakeLists.txt  package.xml
uuv_kinematics_ros_plugin/include/uuv_kinematics_ros_plugin/: UUVKinematicsROSPlugin.hh
uuv_kinematics_ros_plugin/scripts/: case1.py
uuv_kinematics_ros_plugin/src/: UUVKinematicsROSPlugin.cc
