<?xml version="1.0"?>
<package format="2">
  <name>uuv_kinematics_ros_plugin</name>
  <version>0.0.1</version>
  <description>The uuv_kinematics_ros_plugins package</description>
  <maintainer email="wschoi@kmou.ac.kr">bsb</maintainer>
  <license>TODO</license>

  <depend>rospy</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>message_runtime</depend>
  <depend>gazebo_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
